# rvg_4dof_sim

./: .dev-container.dockerfile  .gitignore  README.md  compose-dev.yaml  devcontainer.dockerfile  pyproject.toml
scripts/rv_gunnerus/: Calibrate_RVGManModel_4DOF.py  Module_RVGManModel4DOF.py
src/mcsimpy/models/rv_gunnerus_4dof/: kinematics.py  kinetics.py  model.py  thrusters.py  visualization.py
src/model4dof/lib/: kinetics.py  thrusters.py
src/model4dof/models/RVG_maneuvering4DOF/: Module_RVGManModel4DOF.py
tests/: test1.py
