[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcsimpy"
version = "0.0.1"
dynamic = ["dependencies"]
authors = [
  { name="Mathias Marley", email="author@example.com" },
]
maintainers = [
  { name="Emir Cem Gezer", email="emir.cem.gezer@ntnu.no"}
]
description = "R/V Gunnerus 4DOF Simulation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
# version = {attr = "rvg_4dof_sim.VERSION"}
dependencies = {file = ["requirements.txt"]}

[tool.hatch.build.targets.wheel]
only-include = ["src/mcsimpy", "scripts"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"scripts" = "scripts"